--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="navbar-area fixed-top">
             <!-- Menu For Mobile Device -->
             <div class="mobile-nav">
-                <a href="index.html" class="logo">
+                <a href="index.html" class="logo mobile_logo">
                     <img src="assets/img/images/logo-dark-enhanced.jpeg" alt="Logo">
                 </a>
             </div>
