appointment-button-added-top

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             <div class="mobile-nav">
                 <a href="index.html" class="logo mobile_logo">
                     <img src="assets/img/images/logo-dark-enhanced.jpeg" alt="Logo">
-                </a>
+                </a>  
+                <a href="" class="appbutton_mobile">Get Appointment</a>
             </div>
 
             <!-- Menu For Desktop Device -->
@@ -102,7 +103,7 @@
                                 </li>
                             </ul>
                             <div class="side-nav">
-                                <a href="appointment.html">Get Appointment</a>
+                                <a href="">Get Appointment</a>
                             </div>
                         </div>
                     </nav>
