--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                                 </li>
                                 <li class="wow fadeInUp" data-wow-delay=".4s">
                                     <div class="expertise-icon">
-                                        <i class="flaticon-lawyer"></i>
+                                        <i class="flaticon-cross-border"></i>
                                         <img src="assets/img/home-one/11.png" alt="Shape">
                                     </div>
                                     <h3> Cross-Border Expertise</h3>
