frontend-layout-0completed

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                     <div class="banner-left">
                                         <h1>Top Law Consulting Services in Lebanon</h1>
                                         <p>Assaad Ataya Law Firm is a trusted legal practice in Lebanon and Middle Eastern Arab countries, led by Maitre Assaad Ataya with over 30 years of experience. We provide professional legal solutions tailored to individuals and businesses to protect your rights and safeguard your interests.</p>
-                                        <a href="contact.html">
+                                        <a href="tel:+961 3 821 061">
                                             <i class="icofont-phone"></i> +961 3 821 061 
                                         </a>
                                     </div>
